--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,16 @@ header {
     color: #ffffff;
 }
 
-h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,22 +32,43 @@ nav {
     font-size: 20px;
 }
 
-nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
+header a {
     color: #ffffff;
     text-decoration: none;
 }
 
 p {
     font-size: 16px;
+}
+
+section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+section h3 {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
+footer h2 {
+    font-size: 20px;
 }
 
 .hero {
@@ -88,45 +109,21 @@ p {
     max-height: 200px;
 }
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .benefits {
     margin-right: 20px;
-    padding: 20px;
+    padding: 40px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    color: #ffffff;
+    margin-bottom: 32px;
 }
 
 .benefits img {
     display: block;
-    margin: 10px auto;
+    margin: 30px auto;
     max-width: 150px;
-}
-
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h2 {
-    font-size: 20px;
 }
